# SnakeGL

./: CMakeLists.txt  Camera.c  Estado.c  Mesh.c  Model.c  Player.c  Tabuleiro.c  Texture.c  main.c  shader.c
assets/cone/: wood_cone.mtl
dependencies/glad/: glad.c  glad.h
include/: Camera.h  Estado.h  Mesh.h  Model.h  Player.h  Tabuleiro.h  Texture.h  shader.h
shaders/: outline.fs  outline.vs  player.fs  player.vs  shader.fs  shader.vs  tableShader.fs
